2009-08-29  John W. Eaton  <jwe@octave.org>

	* time/datestr.m: Add missing semicolon.

2009-08-17  Jaroslav Hajek  <highegg@gmail.com>

	* general/int2str.m: Convert to double before calling log10.

2009-08-26  E. Joshua Rigler  <relgire@gmail.com>

	* time/datestr.m: Set tm.isdst to -1 before calling mktime.

2009-08-25  John W. Eaton  <jwe@octave.org>

	* plot/__gnuplot_open_stream__.m: Save pid in __plot_stream__ property.
	* plot/gnuplot_drawnow.m: Wait for gnuplot subprocess when printing.
	From Ben Abbott <bpabbott@mac.com>, Rob Mahurin <rob@utk.edu>, and
	Dmitri Sergatskov <dasergatskov@gmail.com>.

2009-08-22  David Bateman  <dbateman@free.fr>

	* plot/__add_datasource__.m: Correct test for "datasource" argument
	* plot/__countour__.m: Add edgecolor properties and make it an alias
	for linecolor with the value "auto" being "flat" for the edgecolor.

2009-08-17  John W. Eaton  <jwe@octave.org>

	* help/print_usage.m: Make it work again if an argument is given.

2009-08-17  Jaroslav Hajek  <highegg@gmail.com>

	* help/print_usage: Allow calling from methods.

2009-08-11  Jaroslav Hajek  <highegg@gmail.com>

	* general/diff.m: Remove.
	* general/Makefile.in: Update.

2009-08-07  Jaroslav Hajek  <highegg@gmail.com>

	* general/flipdim.m: Fix omitted check.

2009-08-07  Jaroslav Hajek  <highegg@gmail.com>

	* general/flipdim.m: Simplify.

2009-08-07  Olli Saarela  <olli.saarela@gmail.com>

	* plot/__gnuplot_ginput__.m: If read fails to return data, sleep
	before trying again.

2009-08-06  John W. Eaton  <jwe@octave.org>

	* plot/compass.m, plot/feather.m: Simplify argument processing.

2009-08-06  John W. Eaton  <jwe@octave.org>

	* statistics/base/std.m: Correctly work along singleton dimension.
	From Christoph Ellenberger <C.Ellenberger@gmx.net>.

2009-08-06  Jaroslav Hajek  <highegg@gmail.com>

	* geometry/griddata.m: Optimize.

2009-08-06  Olaf Till  <olaf.till@uni-jena.de>

	* geometry/griddata.m: Linearize arrays.
