@@ -1,3 +1,8 @@
+2009-08-31  David Bateman  <dbateman@free.fr>
+
+	* general/quadgk.m: More care with the interval length and
+	convergence of contour integrals.
+
 2009-08-29  John W. Eaton  <jwe@octave.org>
 
 	* time/datestr.m: Add missing semicolon.
